# bllarse

./: .env  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Dockerfile_uv_python  README.md  pyproject.toml  roberta_mnli_linear_probe.md  run_python_script.sh  run_slurm_finetuning_test.sh  start_docker.sh  start_docker_locally.sh  wandb_bllarse_optimizer_batchsize_analysis.ipynb
benchmarks/: bayesian_losses.py  runtimes.ipynb
bllarse_sweeps/: bllarse_wandb_sweep_analysis.ipynb  cifar10_smoke.py  fnf_demo_sweep.py  llf_demo_sweep.py  mnli_roberta_gluex_linear_probe_smoke.py  mnli_roberta_gluex_linear_probe_sweep.py  mnli_roberta_large_len512_extract.py  mnli_roberta_large_len512_extract_batchsize_benchmark.py  mnli_roberta_large_len512_ibprobit_bs1024_alpha_sweep.py  mnli_roberta_large_len512_ibprobit_bs1024_altseeds.py  mnli_roberta_large_len512_ibprobit_bs1024_recheck.py  mnli_roberta_large_len512_ibprobit_data_efficiency.py  mnli_roberta_large_len512_ibprobit_data_efficiency_alpha1e3.py  mnli_roberta_large_len512_ibprobit_data_efficiency_iters64_alpha1e2.py  mnli_roberta_large_len512_ibprobit_data_efficiency_iters64_alpha1e3.py  mnli_roberta_large_len512_ibprobit_data_efficiency_iters6_alpha1e2.py  mnli_roberta_large_len512_ibprobit_data_efficiency_iters6_alpha1e3.py  mnli_roberta_large_len512_ibprobit_initial.py  mnli_roberta_large_len512_ibprobit_singlepass_multiseed.py  mnli_roberta_large_len512_ibprobit_singlepass_multiseed_expanded.py  mnli_roberta_large_len512_ibprobit_singlepass_multiseed_expanded_alpha1e2.py  mnli_roberta_large_len512_ibprobit_singlepass_multiseed_expanded_alpha1e2_iters256.py  mnli_roberta_large_len512_ibprobit_singlepass_multiseed_expanded_alpha1e2_iters6_only.py  mnli_roberta_large_len512_ibprobit_singlepass_multiseed_expanded_alpha1e3.py  mnli_roberta_large_len512_ibprobit_singlepass_multiseed_expanded_alpha1e4.py  mnli_roberta_large_len512_ibprobit_singlepass_multiseed_expanded_seed0to4.py  mnli_roberta_large_len512_linear_probe_bs128_confirm.py  mnli_roberta_large_len512_linear_probe_bs2048_refine.py  mnli_roberta_large_len512_linear_probe_bs512_data_efficiency.py  mnli_roberta_large_len512_linear_probe_bs512_data_efficiency_retuned.py  mnli_roberta_large_len512_linear_probe_bs512_full_tune.py  mnli_roberta_large_len512_linear_probe_bs512_refine.py  mnli_roberta_large_len512_linear_probe_largebatch_adam_adamw.py  mnli_roberta_large_len512_linear_probe_largebatch_adam_lr_dropout_refine.py  mnli_roberta_large_len512_linear_probe_largebatch_adam_lr_extreme_refine.py  mnli_roberta_large_len512_linear_probe_largebatch_adam_lr_high_refine.py  mnli_roberta_large_len512_linear_probe_largebatch_adam_lr_sweep.py  mnli_roberta_large_len512_linear_probe_largebatch_adam_lr_upper_refine.py  (+31 more)
scripts/vbll_pytorch/: README.md  finetuning_vbll.py  notes.md  pyproject.toml
scripts/vbll_pytorch/src/vbll_experiments/: __init__.py  data.py  models.py  training.py
(+5873 files in other folders)
