[project]
name = "bllarse"
version = "0.1.0"
description = "Learning Bayesian last layers on top of deep neural networks with sparse priors and Bayesian model reduction"
readme = "README.md"
authors = [
    { name = "Dimitrije Markovic", email = "5038100+dimarkov@users.noreply.github.com" },
    { name = "Conor Heins", email = "conor.heins@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.0",
    "equimo>=0.3.3",
    "augmax>=0.3.4",
    "tqdm>=4.67.1",
    "pillow>=11.1.0",
    "ipykernel>=6.29.5",
    "jax[cuda]>=0.6.2",
    "optax>=0.2.4",
    "tfp-nightly[jax]",
    "mlpox @ git+https://github.com/dimarkov/mlpox.git@main",
    "blrax @ git+https://github.com/dimarkov/blrax.git@main",
    "mlflow>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "pytest>=8.3.5",
]
alternatives = [
    "transformers[flax]>=4.35.0",
    "sentencepiece>=0.2.0",
]

