[project]
name = "vbll-experiments"
version = "0.1.0"
description = "PyTorch VBLL finetuning experiments for scaling MLPs"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "vbll>=0.2.0",
    "mlflow>=2.10.0",
    "tqdm>=4.67.0",
    "gdown>=5.0.0",
    "progressbar2>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vbll_experiments"]

[dependency-groups]
dev = ["pytest>=8.0.0"]
